test/gator/verify/allow_foo_expansion.yaml
apiVersion: apps/v1
kind: FooTemplate
metadata:
  name: foo-template
spec:
  template:
    foo: bar
