test/gator/verify/allow_foobar_expansion.yaml
apiVersion: apps/v1
kind: FooBarTemplate
metadata:
  name: foobar-template
spec:
  template:
    foo: bar
