test/gator/verify/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sFooIs
metadata:
  name: foo-is-bar
spec:
  match:
    kinds:
      - apiGroups: [""]
        versions: ["v1"]
        kinds: ["FooIsBar"]
  parameters:
    foo: "bar"
