test/gator/verify/constraint_with_scopedEA_without_gator_ep.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sFooIs
metadata:
  name: foo-is-bar
spec:
  enforcementAction: scoped
  scopedEnforcementActions:
  - action: warn
    enforcementPoints:
    - name: validation.gatekeeper.sh
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Foo"]
  parameters:
    foo: "bar"
