test/gator/verify/deny_expansion.yaml
apiVersion: apps/v1
kind: FooTemplate
metadata:
  name: foo-template
spec:
  template:
    foo: qux
