test/gator/verify/suite.yaml
apiVersion: test.gatekeeper.sh/v1alpha1
kind: Suite
tests:
- name: foo-is-bar
  template: template.yaml
  constraint: constraint.yaml
  cases:
  - name: foo-bar
    object: allow.yaml
    assertions:
    - violations: no
  - name: foo-not-bar
    object: deny.yaml
    assertions:
    - violations: yes
- name: foo-is-bar-with-scopedEA
  template: template.yaml
  constraint: constraint_with_scopedEA.yaml
  cases:
  - name: foo-bar
    object: allow.yaml
    assertions:
    - violations: no
  - name: foo-not-bar
    object: deny.yaml
    assertions:
    - violations: yes
